[gd_scene load_steps=24 format=3 uid="uid://c3xyq5tra3eyx"]

[ext_resource type="Script" path="res://scripts/t_rex_candy.gd" id="1_dh214"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="2_qgi35"]
[ext_resource type="Texture2D" uid="uid://cuu78vl3qe7oq" path="res://assets/ui/black.png" id="3_ss8et"]
[ext_resource type="PackedScene" uid="uid://v4cukti18rrm" path="res://scenes/candy_arrow.tscn" id="4_ugqwk"]
[ext_resource type="Texture2D" uid="uid://dhh8e0hsf548p" path="res://assets/t_rex_candy/pc_static.png" id="5_6bafl"]
[ext_resource type="Texture2D" uid="uid://8mwvmamxanup" path="res://assets/t_rex_candy/t_rex_static.png" id="5_y0h6n"]
[ext_resource type="Texture2D" uid="uid://cj3powqno8687" path="res://assets/t_rex_candy/conveyor_belt_static.png" id="6_5jj4u"]
[ext_resource type="Texture2D" uid="uid://di1achfy06u80" path="res://assets/t_rex_candy/ring_sprite_sheet.png" id="6_f8hln"]
[ext_resource type="Shader" path="res://shaders/recolor.gdshader" id="7_2gg1w"]
[ext_resource type="PackedScene" uid="uid://bp7i043fy7n2j" path="res://scenes/controls.tscn" id="8_yoofu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b1j0e"]
atlas = ExtResource("6_f8hln")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbca3"]
atlas = ExtResource("6_f8hln")
region = Rect2(34, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_76amu"]
atlas = ExtResource("6_f8hln")
region = Rect2(68, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_np71s"]
atlas = ExtResource("6_f8hln")
region = Rect2(102, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bhje"]
atlas = ExtResource("6_f8hln")
region = Rect2(136, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpmhf"]
atlas = ExtResource("6_f8hln")
region = Rect2(170, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kt5h"]
atlas = ExtResource("6_f8hln")
region = Rect2(204, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_bgamp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1j0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76amu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np71s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bhje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpmhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kt5h")
}],
"loop": false,
"name": &"burst",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3tqsj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3ym01"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8qa6l"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2bmkp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7fog1"]
shader = ExtResource("7_2gg1w")
shader_parameter/threshold1 = 0.167
shader_parameter/threshold2 = 0.5
shader_parameter/threshold3 = 0.833
shader_parameter/color1 = Color(0.0313726, 0.0941176, 0.12549, 1)
shader_parameter/color2 = Color(0.921569, 0.419608, 0.435294, 1)
shader_parameter/color3 = Color(0.976471, 0.658824, 0.458824, 1)
shader_parameter/color4 = Color(1, 0.964706, 0.827451, 1)

[node name="TRexCandy" type="Node2D"]
script = ExtResource("1_dh214")

[node name="MidiPlayerSpawn" parent="." instance=ExtResource("2_qgi35")]
file = "res://assets/demo/music/smb_overworld.mid"
soundfont = "res://assets/demo/music/8bit.sf2"
bus = &"Music"
muted = true

[node name="MidiPlayerAudio" parent="." instance=ExtResource("2_qgi35")]
file = "res://assets/demo/music/smb_overworld.mid"
volume_db = 0.0
soundfont = "res://assets/demo/music/8bit.sf2"
bus = &"Music"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(79.75, 71.75)
scale = Vector2(160.5, 144.5)
texture = ExtResource("3_ss8et")

[node name="PlayerCharacter" type="Sprite2D" parent="."]
position = Vector2(41, 39)
texture = ExtResource("5_6bafl")
offset = Vector2(0.5, 0)

[node name="ConveyorBelt" type="Sprite2D" parent="."]
position = Vector2(80, 87)
texture = ExtResource("6_5jj4u")

[node name="SplashRing" type="AnimatedSprite2D" parent="."]
position = Vector2(38, 77)
sprite_frames = SubResource("SpriteFrames_bgamp")
animation = &"burst"
frame = 6
frame_progress = 1.0

[node name="SplashRingHolder" type="Node2D" parent="."]
position = Vector2(38, 77)

[node name="Goals" type="Node2D" parent="."]
position = Vector2(18, 77)

[node name="Great" type="Area2D" parent="Goals"]
position = Vector2(20, 0)
collision_layer = 0

[node name="Hitbox" type="CollisionShape2D" parent="Goals/Great"]
shape = SubResource("CircleShape2D_3tqsj")

[node name="Good" type="Area2D" parent="Goals"]
position = Vector2(20, 0)
collision_layer = 0

[node name="Hitbox" type="CollisionShape2D" parent="Goals/Good"]
shape = SubResource("CircleShape2D_3ym01")

[node name="OK" type="Area2D" parent="Goals"]
position = Vector2(20, 0)
collision_layer = 0

[node name="Hitbox" type="CollisionShape2D" parent="Goals/OK"]
shape = SubResource("CircleShape2D_8qa6l")

[node name="Miss" type="Area2D" parent="Goals"]
position = Vector2(-32, 0)
collision_layer = 0

[node name="Hitbox" type="CollisionShape2D" parent="Goals/Miss"]
shape = SubResource("CircleShape2D_2bmkp")

[node name="Candy" type="Node2D" parent="."]
position = Vector2(172, 77)

[node name="L" parent="Candy" node_paths=PackedStringArray("goal") instance=ExtResource("4_ugqwk")]
label = "L"
goal = NodePath("../../Goals/Great")
duration_to_goal_sec = 0.8

[node name="D" parent="Candy" node_paths=PackedStringArray("goal") instance=ExtResource("4_ugqwk")]
label = "D"
goal = NodePath("../../Goals/Great")
duration_to_goal_sec = 0.8

[node name="U" parent="Candy" node_paths=PackedStringArray("goal") instance=ExtResource("4_ugqwk")]
label = "U"
goal = NodePath("../../Goals/Great")
duration_to_goal_sec = 0.8

[node name="R" parent="Candy" node_paths=PackedStringArray("goal") instance=ExtResource("4_ugqwk")]
label = "R"
goal = NodePath("../../Goals/Great")
duration_to_goal_sec = 0.8

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="TRex" type="Sprite2D" parent="Foreground"]
position = Vector2(95, 100)
texture = ExtResource("5_y0h6n")
offset = Vector2(0, 0.5)

[node name="RecolorLayer" type="CanvasLayer" parent="."]

[node name="RecolorShader" type="ColorRect" parent="RecolorLayer"]
material = SubResource("ShaderMaterial_7fog1")
offset_right = 160.0
offset_bottom = 256.0

[node name="Controls" parent="." instance=ExtResource("8_yoofu")]
